--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,6 +19,15 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
 
+    services:
+      db:
+        image: postgres:16-alpine
+        ports: ["5432:5432"]
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: forth_evaluator_test
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
